# qayeq

./: .gitignore  Cargo.toml  README.md  build.rs  dev.myyc.qayeq.json
.cargo/: config.toml
.github/workflows/: flatpak.yml
data/: dev.myyc.qayeq.desktop  dev.myyc.qayeq.gschema.xml
data/gschemas/: gschemas.compiled
resources/: qayeq.gresource.xml  style.css
resources/filters/: easyprivacy.json  youtube-ads.json  youtube-scriptlets.txt
resources/ui/: preferences.ui  shortcuts.ui  window.ui
scripts/: convert_easylist.py
src/: application.rs  config.rs  main.rs  recently_closed.rs  session.rs
src/clear_data/: dialog.rs  mod.rs
src/completion/: history_provider.rs  mod.rs  provider.rs  row.rs  search_provider.rs
src/content_filter/: mod.rs
src/content_filter/scriptlets/: builtin.rs  fetcher.rs  mod.rs  parser.rs
src/download/: mod.rs  row.rs
src/history/: database.rs  mod.rs
src/preferences/: mod.rs  window.rs
src/profile/: manager.rs  mod.rs
src/tab/: manager.rs  mod.rs  row.rs
src/url_bar/: mod.rs  parser.rs
src/webview/: mod.rs
src/window/: imp.rs  mod.rs
