[package]
name = "qayeq"
version = "0.1.0"
edition = "2021"
authors = ["myyc"]
description = "A GNOME web browser"
license = "GPL-3.0-or-later"
repository = "https://github.com/myyc/qayeq"

[dependencies]
# GTK4 and libadwaita
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
gdk4 = "0.9"
glib = "0.20"
gio = "0.20"

# WebKit6 for web rendering (GTK4 native)
webkit6 = "0.4"

# HTTP client for search suggestions
soup3 = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# URL handling
url = "2.5"
urlencoding = "2.1"

# Filesystem
directories = "6.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (for settings and session)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[build-dependencies]
glib-build-tools = "0.20"

[profile.release]
lto = true
codegen-units = 1
strip = true
